@@ -2453,6 +2453,10 @@ public class CoreContainer {
     return status;
   }
 
+  public boolean isStatusLoadComplete() {
+    return LOAD_COMPLETE == (getStatus() & LOAD_COMPLETE);
+  }
+
   public boolean hideStackTrace() {
     return cfg.hideStackTraces();
   }
