@@ -154,6 +154,8 @@ Bug Fixes
 
 * SOLR-17113: Correct how `/replication?command=details` describes errors in backup operations.  (Przemyslaw Ciezkowski via Christine Poerschke and Jason Gerlowski)
 
+* SOLR-17200: Fix false positive race condition in `/health?requireHealthyCores=true` during core loading (hossman)
+
 Dependency Upgrades
 ---------------------
 
